<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Japan Micro System
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/frame_title_holder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:background="@color/frameColor"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/list_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_holder_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:background="@color/windowBackground"
            android:elevation="1dp"
            android:ems="5"
            android:gravity="center"
            android:text="@string/eCode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/title_holder_worker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/title_holder_worker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:background="@color/windowBackground"
            android:elevation="1dp"
            android:ems="3"
            android:gravity="center"
            android:text="@string/eWorker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/title_holder_code"
            app:layout_constraintRight_toLeftOf="@id/title_holder_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/title_holder_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:background="@color/windowBackground"
            android:elevation="1dp"
            android:ems="8"
            android:gravity="center"
            android:text="@string/workerName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/title_holder_worker"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />
    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/list_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/frameColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_title_holder"></ListView>

</android.support.constraint.ConstraintLayout>